--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^5.5.6",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-resize-directive": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
