--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "firebase": "^5.5.6",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-chartjs": "^3.4.0",
     "vue-resize-directive": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
